// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/ActionModal should render ActionModal with specified scope 1`] = `
<SimpleComposeWrapper [theme:normal]
  onClose={[Function]}
  scope="inplace"
  theme="normal"
  visible={true}
  zIndex={100}
>
  <div
    className="modal"
  >
    <h3
      className="header"
    >
      <span>
        ActionModal
      </span>
      <SimpleComposeWrapper [baseline:true]
        icon={[Function]}
        onClick={[Function]}
        size="s"
        view="clear"
      />
    </h3>
    <div
      className="body"
    />
    <div
      className="footer"
    >
      <SimpleComposeWrapper [baseline:true]
        key="apply"
        onClick={[Function]}
        size="s"
        view="action"
      >
        Title
      </SimpleComposeWrapper [baseline:true]>
    </div>
  </div>
</SimpleComposeWrapper [theme:normal]>
`;

exports[`UI/ActionModal should render hidden ActionModal 1`] = `
<SimpleComposeWrapper [theme:normal]
  onClose={[Function]}
  scope="inplace"
  theme="normal"
  visible={false}
  zIndex={100}
>
  <div
    className="modal"
  >
    <h3
      className="header"
    >
      <span>
        ActionModal
      </span>
      <SimpleComposeWrapper [baseline:true]
        icon={[Function]}
        onClick={[Function]}
        size="s"
        view="clear"
      />
    </h3>
    <div
      className="body"
    />
    <div
      className="footer"
    >
      <SimpleComposeWrapper [baseline:true]
        key="apply"
        onClick={[Function]}
        size="s"
        view="action"
      >
        Title
      </SimpleComposeWrapper [baseline:true]>
    </div>
  </div>
</SimpleComposeWrapper [theme:normal]>
`;

exports[`UI/ActionModal should render visible ActionModal 1`] = `
<SimpleComposeWrapper [theme:normal]
  onClose={[Function]}
  scope="inplace"
  theme="normal"
  visible={true}
  zIndex={100}
>
  <div
    className="modal"
  >
    <h3
      className="header"
    >
      <span>
        ActionModal
      </span>
      <SimpleComposeWrapper [baseline:true]
        icon={[Function]}
        onClick={[Function]}
        size="s"
        view="clear"
      />
    </h3>
    <div
      className="body"
    />
    <div
      className="footer"
    >
      <SimpleComposeWrapper [baseline:true]
        key="apply"
        onClick={[Function]}
        size="s"
        view="action"
      >
        Title
      </SimpleComposeWrapper [baseline:true]>
    </div>
  </div>
</SimpleComposeWrapper [theme:normal]>
`;
